# nas-sync-script-builder

./: .gitignore  README.md  pyproject.toml  requirements.txt
nas_sync_script_builder/: __init__.py  __main__.py  cli.py  config.py  gui.py  main.py  partitions.py  template.py
nas_sync_script_builder/templates/: nas-sync.sh.tpl
src/: nas_sync_script_builder.py
templates/: nas-sync.sh.tpl
